# methXsort

./: .gitignore  README.md  methXsort.py  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  publish-test-pypi.yml  publish.yaml  test-simulation.yml  tests.yml
docs/: GITHUB_ACTIONS_FIX.md  INSTALLATION.md  QUICK_START_PUBLISHING.md
methxsort/: __init__.py  __main__.py  core.py
scripts/simulate_reads/: sim_bs_reads_sherman.smk  sim_bs_reads_sherman_xengsort.smk
sf_smk_wl/: Snakefile  Snakefile_bbsplit  methXsort_index.smk
